# grassmann

./: Bivector.cpp  CMakeLists.txt  Grassman.cpp  Quadvector.cpp  README.md  Scalar.cpp  Trivector.cpp  Vector.cpp
demo/: CMakeLists.txt  Makefile  cmake_install.cmake  demo  main.cpp
doc/: rapport.aux  rapport.tex  rapport.tex.backup  rapport.tex~
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/include/: BiVector.hpp  GCA_antibivector.hpp  GCA_antiquadvector.hpp  GCA_antiscalar.hpp  GCA_antitrivector.hpp  GCA_antivector.hpp  GCA_bivector.hpp  GCA_quadvector.hpp  GCA_scalar.hpp  GCA_trivector.hpp  GCA_vector.hpp  Vector.hpp  grassmanCayley.hpp
lib/src/: BiVector.cpp  GCA_antibivector.cpp  GCA_antiquadvector.cpp  GCA_antiscalar.cpp  GCA_antitrivector.cpp  GCA_antivector.cpp  GCA_bivector.cpp  GCA_quadvector.cpp  GCA_scalar.cpp  GCA_trivector.cpp  GCA_vector.cpp  Vector.cpp
